site/web/app/themes/nos/resources/assets/styles/layouts/_footer.scss
footer.content-info {
  .footer-up {
    @include font-light;

    nav {
      &:first-child ul {
        padding: 0;
      }

      padding: 1em 1em 1em 0;

      @include media(">phone", "<tablet") {
        padding: 1em 1em 1em 0;
      }

      @include media(">=tablet") {
        padding: 3em 1em 1em 0;
      }
    }

    .widget_text {
      @include media(">phone", "<tablet") {
        width: 100%;
      }

      @include media(">950px") {
        width: 40%;
      }

      padding: 1em 2em 1em 1em;
    }
  }

  .footer-down {
    .nav-secondary ul li {
      @include font-light;

      margin-right: 3em;
    }

    .widget_text {
      @apply text-center text-white text-xs tracking-wider;

      padding-bottom: 1rem;
    }
  }
}

